--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,6 @@
         <span>This is For Angular {{works}} </span>
 
         <br>
-
         <br>
 
         <div *ngFor = "let block of blocks let i=index" style="color: red;">
@@ -32,11 +31,22 @@
             {{data.city}}
        </div>
 
-
-
-
 <div >
-
 
 </div>
 
+
+<hr>
+
+<div class="container">
+    <div class="row">
+
+        <p *ngIf="show">
+            Show this only if "show" is true
+        </p>
+
+        <button type="button" (click)="hide()" class="btn btn-primary">Click</button>
+
+
+    </div>
+</div>
