--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ header .navbar-brand { padding: 3px 15px;}
 
 .banner { background:url(./assets/images/banner.png) no-repeat top center; background-size: cover; width: 100%; height: 492px; }
 
-.footer-nav				{margin:0;padding:20px 0 20px;width:100%;display:block;background:#7d7d7d;text-align: center; position: fixed; bottom: 0; width: 100%; left: 0;}
+.footer-nav				{margin:100px 0 0;padding:20px 0 20px;width:100%;display:block;background:#7d7d7d;text-align: center;bottom: 0; width: 100%; left: 0;}
 .footer-nav p{font-size:20px;color:#000;font-weight: 300; margin: 0;}
 
 
