--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -60,12 +60,28 @@
         <div [ngStyle]="dynamic()">
                 ng Styles Properties
         </div>
+    
+        <hr>
+
+        <!-- <img src="assets/images/location.jpg" width="300" height="200" alt="img"> -->
+        <!-- <img src="{{logo}}" width="300" height="200" alt="img"> -->
+        <img [src]="logo" width="300" height="200" alt="img"> <br>
+        <br>
+        <button type="button" class="btn btn-success" (click)="showImg()">Click</button>
+
+        
 
 
-        <img src="assets/images/location.jpg">
 
 
 
 
+
+
+
+
+
+
+        
     </div>
 </div>
