--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -65,7 +65,7 @@
 
         <!-- <img src="assets/images/location.jpg" width="300" height="200" alt="img"> -->
         <!-- <img src="{{logo}}" width="300" height="200" alt="img"> -->
-        <img [src]="logo" width="300" height="200" alt="img"> <br>
+        <img [src]="selectLogos" width="300" height="200" alt="img"> <br>
         <br>
         <button type="button" class="btn btn-success" (click)="showImg()">Click</button>
 
